# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import companyRouter from "./company";
 import clientsRouter from "./clients";
 import articlesRouter from "./articles";
 import documentsRouter from "./documents";
+import reglementsRouter from "./reglements";
 import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
@@ -13,6 +14,7 @@ router.use(companyRouter);
 router.use(clientsRouter);
 router.use(articlesRouter);
 router.use(documentsRouter);
+router.use(reglementsRouter);
 router.use(dashboardRouter);
 
 export default router;
